--- a/index.htm
+++ b/index.htm
@@ -5,5 +5,7 @@
 </head>
 <body>
 <h1>This, is only a test.</h1>
+  <a href="Page1.htm">Page 1</a>
+  <a href="Page2.htm">Page 2</a>
 </body>
 </html>
