Added a page, added a link to it.

--- a/index.htm
+++ b/index.htm
@@ -7,5 +7,6 @@
 <h1>This, is only a test.</h1>
   <a href="Page1.htm">Page 1</a>
   <a href="Page2.htm">Page 2</a>
+  <a href="Page3.htm">Page 3</a>
 </body>
 </html>
